Fix team member images and update descriptions

--- a/paginas/equipe.html
+++ b/paginas/equipe.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="team-card">
-                        <img src="https://mc-heads.net/avatar/_steve" alt="Avatar do Membro" class="team-avatar">
+                        <img src="../imagens/BlackType.png" alt="Avatar do Membro" class="team-avatar">
                         <h3 class="team-name">BlackType</h3>
                         <span class="team-role">Administrador / Developer</span>
                         <p class="team-description">"Responsável pela administração diária, gerenciamento de staff e organização de eventos."</p>
@@ -75,4 +75,5 @@
     <script src="../script.js"></script>
 </body>
 </html>
+
 
