--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="paginas/desenvolvimento.html">Desenvolvimento</a></li>
                     </ul>
                 </nav>
-                
+                <img src="imagens/image.png">
                 <button id="theme-toggle" class="theme-button">Modo Claro</button>
             </div>
         </div>
@@ -57,4 +57,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
